--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="app_name_short">OsmAnd Tracker</string>
     <string name="shared_string_telegram">Telegram</string>
     <string name="privacy_policy_use_telegram">Telegram (the messaging app) is used to connect and communicate with people.</string>
-    <string name="privacy_policy_telegram_client">Telegram open platform and OsmAnd Tracker is one of the customers. Your contacts can use any other Telegram client.</string>
-    <string name="privacy_policy_agree">By clicking continue you agree to the Telegram Privacy Policy and the OsmAnd Privacy Policy.</string>
+    <string name="privacy_policy_telegram_client">OsmAnd tracker is one of the clients that use the Telegram open platform. Your contacts can use any other Telegram client.</string>
+    <string name="privacy_policy_agree">By clicking continue you agree to the conditions of Telegram Privacy Policy and OsmAnd Privacy Policy.</string>
     <string name="shared_string_accept">Accept</string>
     <string name="telegram_privacy_policy">Telegram Privacy Policy</string>
     <string name="osmand_privacy_policy">OsmAnd Privacy Policy</string>
@@ -208,7 +208,7 @@
     <string name="shared_string_hour_short">h</string>
     <string name="shared_string_minute_short">min</string>
     <string name="shared_string_second_short">sec</string>
-    <string name="welcome_descr"><![CDATA[<b>OsmAnd Tracker</b> lets you share your location and see that of others in the OsmAnd.<br/><br/>The app uses Telegram API and you need a Telegram account.]]></string>
+    <string name="welcome_descr"><![CDATA[<b>OsmAnd Tracker</b> lets you share your location and see that of others in OsmAnd.<br/><br/>The app uses Telegram API, so you need a Telegram account.]]></string>
     <string name="my_location">My location</string>
     <string name="live_now">Live now</string>
     <string name="timeline">Timeline</string>
