--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -10,9 +10,9 @@
 	- For wording and consistency, please note https://osmand.net/help-online?id=technical-articles#Creating_a_Consistent_User_Experience
 	Thx - Hardy
 -->
+    <string name="shared_string_swap">Swap</string>
     <string name="show_more">Show more</string>
     <string name="tracks_on_map">Tracks on the map</string>
-    <string name="add_destination_query">Please add Destination first</string>
     <string name="previous_route">Previous route</string>
 	<string name="add_home">Add home</string>
 	<string name="add_work">Add work</string>
