--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -2896,8 +2896,8 @@
     <string name="quick_action_take_photo_note">New photo note</string>
     <string name="quick_action_add_osm_bug">Add OSM Note</string>
     <string name="quick_action_navigation_voice">Voice on/off</string>
-    <string name="quick_action_navigation_voice_off">Voice is off</string>
-    <string name="quick_action_navigation_voice_on">Voice is on</string>
+    <string name="quick_action_navigation_voice_off">Unmute Voice</string>
+    <string name="quick_action_navigation_voice_on">Mute Voice</string>
     <string name="quick_action_add_gpx">Add GPX waypoint</string>
     <string name="quick_action_add_parking">Add parking place</string>
     <string name="quick_action_new_action">Add action</string>
