--- a/OsmAnd/res/values-da/strings.xml
+++ b/OsmAnd/res/values-da/strings.xml
@@ -2891,17 +2891,16 @@ Repræsenterer område: %1$s x %2$s</string>
     <string name="add_destination_point">Tilføj destination</string>
     <string name="add_intermediate_point">Tilføj mellemliggende</string>
     <string name="add_start_point">Tilføj startpunkt</string>
-    <string name="intermediate_waypoint">Mellemliggende punkt: %1$s</string>
-    <string name="waypoints">Rutepunkter: %1$s</string>
-    <string name="transfers">overførsler: %1$s</string>
-    <string name="on_foot">til fods: %1$s</string>
+    <string name="intermediate_waypoint">Mellemliggende punkt</string>
+    <string name="transfers">overførsler</string>
+    <string name="on_foot">til fods</string>
     <string name="points_of_interests">Interessepunkter (IP)</string>
     <string name="waiting_for_route_calculation">Venter på ruteberegningen</string>
     <string name="app_mode_public_transport">Offentlig transport</string>
     <string name="avoid_roads_descr">Vælg vejen på kortet eller fra nedenstående liste, der skal undgås under navigation:</string>
     <string name="show_along_the_route">Vis langs ruten</string>
     <string name="simulate_navigation">Simulere navigation</string>
-    <string name="intermediate_destinations">Mellemliggende destinationer: %1$s</string>
+    <string name="intermediate_destinations">Mellemliggende destinationer</string>
     <string name="quick_action_switch_day_mode">Dag tilstand</string>
     <string name="quick_action_switch_night_mode">Nat tilstand</string>
     <string name="quick_action_day_night_switch_mode">Skift dag/nat tilstand</string>
@@ -2910,7 +2909,7 @@ Repræsenterer område: %1$s x %2$s</string>
     <string name="shared_string_capacity">Kapacitet</string>
     <string name="shared_string_width">Bredde</string>
     <string name="shared_string_height">Højde</string>
-    <string name="route_way">Vej: %1$s</string>
+    <string name="route_way">Vej</string>
     <string name="choose_track_file_to_follow">Vælg sporfil til at følge</string>
     <string name="swap_start_and_destination">Skift start og destination</string>
     <string name="voice_announcements">Stemmemeddelelser</string>
