--- a/OsmAnd/res/values-eu/strings.xml
+++ b/OsmAnd/res/values-eu/strings.xml
@@ -2889,16 +2889,15 @@ Area honi dagokio: %1$s x %2$s</string>
     <string name="add_destination_point">Gehitu helburua</string>
     <string name="add_intermediate_point">Gehitu tarteko puntua</string>
     <string name="add_start_point">Gehitu abiapuntua</string>
-    <string name="intermediate_waypoint">Tarteko puntua: %1$s</string>
-    <string name="waypoints">Bide-puntuak: %1$s</string>
-    <string name="transfers">transferentziak: %1$s</string>
-    <string name="on_foot">oinez: %1$s</string>
-    <string name="route_way">Bidea: %1$s</string>
+    <string name="intermediate_waypoint">Tarteko puntua</string>
+    <string name="transfers">transferentziak</string>
+    <string name="on_foot">oinez</string>
+    <string name="route_way">Bidea</string>
     <string name="points_of_interests">Puntu interesgarriak (POI)</string>
     <string name="app_mode_public_transport">Garraio publikoa</string>
     <string name="simulate_navigation">Simulatu nabigazioa</string>
     <string name="voice_announcements">Ahots bidezko iragarpenak</string>
-    <string name="intermediate_destinations">Tarteko helburuak: %1$s</string>
+    <string name="intermediate_destinations">Tarteko helburuak</string>
     <string name="arrive_at_time">Heltzeko ordua: %1$s</string>
     <string name="lang_gn_py">Guaraniera</string>
     <string name="quick_action_switch_day_mode">Eguneko modua</string>
