--- a/OsmAnd/res/values-be-rBY/strings.xml
+++ b/OsmAnd/res/values-be-rBY/strings.xml
@@ -3182,11 +3182,10 @@ Praparcyjnaj pamiacі %4$s MB (Abmiežavańnie Android %5$s MB, Dalvik %6$s MB).
     <string name="add_destination_point">Dadać punkt pryznačennia</string>
     <string name="add_intermediate_point">Dadać pramiežkavy punkt</string>
     <string name="add_start_point">Dadać pačatkovy punkt</string>
-    <string name="intermediate_waypoint">Pramiežkavy punkt: %1$s</string>
-    <string name="waypoints">Punkty šliachu: %1$s</string>
-    <string name="transfers">transfiery: %1$s</string>
-    <string name="on_foot">pieššu: %1$s</string>
-    <string name="route_way">Šliach: %1$s</string>
+    <string name="intermediate_waypoint">Pramiežkavy punkt</string>
+    <string name="transfers">transfiery</string>
+    <string name="on_foot">pieššu</string>
+    <string name="route_way">Šliach</string>
     <string name="points_of_interests">Punkty cikavasciaŭ (POI)</string>
     <string name="waiting_for_route_calculation">Čakannie padliku maršrutu</string>
     <string name="app_mode_public_transport">Hramadski transpart</string>
@@ -3195,7 +3194,7 @@ Praparcyjnaj pamiacі %4$s MB (Abmiežavańnie Android %5$s MB, Dalvik %6$s MB).
     <string name="simulate_navigation">Simuliavać navihacyju</string>
     <string name="choose_track_file_to_follow">Abiarycie fajl sliedu</string>
     <string name="voice_announcements">Halasavyja apaviaščenni</string>
-    <string name="intermediate_destinations">Pramiežkavyja punkty: %1$s</string>
+    <string name="intermediate_destinations">Pramiežkavyja punkty</string>
     <string name="arrive_at_time">Prybyccio a %1$s</string>
     <string name="quick_action_switch_day_night_descr">Naciskannie na knopku dziejannia pierakliučaje načny i dzionny režymy OsmAnd</string>
     <string name="quick_action_switch_day_mode">Dzionny režym</string>
