--- a/OsmAnd/res/values-ca/strings.xml
+++ b/OsmAnd/res/values-ca/strings.xml
@@ -2901,11 +2901,10 @@ Abasta l\'àrea: %1$s x %2$s</string>
     <string name="add_destination_point">Afegeix destinació</string>
     <string name="add_intermediate_point">Afegeix punt intermedi</string>
     <string name="add_start_point">Afegeix punt d\'Inici</string>
-    <string name="intermediate_waypoint">Punt intermedi: %1$s</string>
-    <string name="waypoints">Fites: %1$s</string>
-    <string name="transfers">transferències: %1$s</string>
-    <string name="on_foot">a peu: %1$s</string>
-    <string name="route_way">Via: %1$s</string>
+    <string name="intermediate_waypoint">Punt intermedi</string>
+    <string name="transfers">transferències</string>
+    <string name="on_foot">a peu</string>
+    <string name="route_way">Via</string>
     <string name="points_of_interests">Punts d\'interès(PDI)</string>
     <string name="waiting_for_route_calculation">Esperant el càlcul de la ruta</string>
     <string name="app_mode_public_transport">Transport públic</string>
@@ -2914,7 +2913,7 @@ Abasta l\'àrea: %1$s x %2$s</string>
     <string name="simulate_navigation">Simula la navegació</string>
     <string name="choose_track_file_to_follow">Seleccioneu l\'arxiu de la traça a seguir</string>
     <string name="voice_announcements">Anuncis de veu</string>
-    <string name="intermediate_destinations">Destinacions intermèdies: %1$s</string>
+    <string name="intermediate_destinations">Destinacions intermèdies</string>
     <string name="arrive_at_time">Arribada a %1$s</string>
     <string name="cubic_m">m³</string>
     <string name="metric_ton">t</string>
