--- a/OsmAnd/res/values-cs/strings.xml
+++ b/OsmAnd/res/values-cs/strings.xml
@@ -2860,11 +2860,10 @@ Zobrazená oblast: %1$s x %2$s</string>
     <string name="add_destination_point">Přidat cíl</string>
     <string name="add_intermediate_point">Přidat mezicíl</string>
     <string name="add_start_point">Přidat startovní bod</string>
-    <string name="intermediate_waypoint">Mezicíl: %1$s</string>
-    <string name="waypoints">Body na cestě: %1$s</string>
-    <string name="transfers">přestupy: %1$s</string>
-    <string name="on_foot">pěšky: %1$s</string>
-    <string name="route_way">Cesta: %1$s</string>
+    <string name="intermediate_waypoint">Mezicíl</string>
+    <string name="transfers">přestupy</string>
+    <string name="on_foot">pěšky</string>
+    <string name="route_way">Cesta</string>
     <string name="points_of_interests">Body zájmu (POI)</string>
     <string name="waiting_for_route_calculation">Čekám na výpočet trasy</string>
     <string name="app_mode_public_transport">Veřejná doprava</string>
@@ -2873,7 +2872,7 @@ Zobrazená oblast: %1$s x %2$s</string>
     <string name="simulate_navigation">Simulovat navigaci</string>
     <string name="choose_track_file_to_follow">Vyberte soubor s trasou, kterou chcete následovat</string>
     <string name="voice_announcements">Hlasová oznámení</string>
-    <string name="intermediate_destinations">Mezicíle: %1$s</string>
+    <string name="intermediate_destinations">Mezicíle</string>
     <string name="arrive_at_time">Příjezd v %1$s</string>
     <string name="add_destination_query">Nejdříve prosím zadejte cíl</string>
     <string name="previous_route">Předchozí trasa</string>
