--- a/OsmAnd/res/values-eo/strings.xml
+++ b/OsmAnd/res/values-eo/strings.xml
@@ -2875,11 +2875,10 @@ Indikas lokon:  %1$s x %2$s"</string>
     <string name="add_destination_point">Aldoni celon</string>
     <string name="add_intermediate_point">Aldoni intercelon</string>
     <string name="add_start_point">Aldoni komencpunkton</string>
-    <string name="intermediate_waypoint">Intercelo: %1$s</string>
-    <string name="waypoints">Navigadpunktoj: %1$s</string>
-    <string name="transfers">transveturiliĝoj: %1$s</string>
-    <string name="on_foot">piede: %1$s</string>
-    <string name="route_way">Vojo: %1$s</string>
+    <string name="intermediate_waypoint">Intercelo</string>
+    <string name="transfers">transveturiliĝoj</string>
+    <string name="on_foot">piede</string>
+    <string name="route_way">Vojo</string>
     <string name="points_of_interests">Interesejoj</string>
     <string name="waiting_for_route_calculation">Atendu ĝis la kurso kalkuliĝos</string>
     <string name="app_mode_public_transport">Transporto publika</string>
@@ -2888,7 +2887,7 @@ Indikas lokon:  %1$s x %2$s"</string>
     <string name="simulate_navigation">Simuli navigadon</string>
     <string name="choose_track_file_to_follow">Elektu dosieron de kurso por sekvi</string>
     <string name="voice_announcements">Voĉaj anoncoj</string>
-    <string name="intermediate_destinations">Interceloj: %1$s</string>
+    <string name="intermediate_destinations">Interceloj</string>
     <string name="arrive_at_time">Alveno je %1$s</string>
     <string name="cubic_m">m³</string>
     <string name="metric_ton">Mg</string>
