--- a/OsmAnd/res/values-es-rAR/strings.xml
+++ b/OsmAnd/res/values-es-rAR/strings.xml
@@ -2892,11 +2892,10 @@ Lon %2$s</string>
     <string name="add_destination_point">Añadir destino</string>
     <string name="add_intermediate_point">Añadir punto intermedio</string>
     <string name="add_start_point">Añadir punto de partida</string>
-    <string name="intermediate_waypoint">Punto intermedio: %1$s</string>
-    <string name="waypoints">Puntos de referencia: %1$s</string>
-    <string name="transfers">transferencias: %1$s</string>
-    <string name="on_foot">a pie: %1$s</string>
-    <string name="route_way">Ruta: %1$s</string>
+    <string name="intermediate_waypoint">Punto intermedio</string>
+    <string name="transfers">transferencias</string>
+    <string name="on_foot">a pie</string>
+    <string name="route_way">Ruta</string>
     <string name="points_of_interests">Puntos de interés (PDI)</string>
     <string name="waiting_for_route_calculation">Esperando el cálculo de la ruta</string>
     <string name="app_mode_public_transport">Transporte público</string>
@@ -2905,7 +2904,7 @@ Lon %2$s</string>
     <string name="simulate_navigation">Simular navegación</string>
     <string name="choose_track_file_to_follow">Elige el archivo de la traza a seguir</string>
     <string name="voice_announcements">Anuncios de voz</string>
-    <string name="intermediate_destinations">Destinos intermedios: %1$s</string>
+    <string name="intermediate_destinations">Destinos intermedios</string>
     <string name="arrive_at_time">Llegará a las %1$s</string>
     <string name="cubic_m">m³</string>
     <string name="metric_ton">ton</string>
