--- a/OsmAnd/res/values-fr/strings.xml
+++ b/OsmAnd/res/values-fr/strings.xml
@@ -2867,11 +2867,10 @@ représentant la zone : %1$s x %2$s</string>
     <string name="add_destination_point">Ajouter destination</string>
     <string name="add_intermediate_point">Ajouter étape</string>
     <string name="add_start_point">Ajouter départ</string>
-    <string name="intermediate_waypoint">Étape : %1$s</string>
-    <string name="waypoints">Points de passage : %1$s</string>
-    <string name="transfers">transferts : %1$s</string>
-    <string name="on_foot">à pied : %1$s</string>
-    <string name="route_way">Mode : %1$s</string>
+    <string name="intermediate_waypoint">Étape</string>
+    <string name="transfers">transferts</string>
+    <string name="on_foot">à pied</string>
+    <string name="route_way">Mode</string>
     <string name="points_of_interests">Points d\'intérêt (PI)</string>
     <string name="waiting_for_route_calculation">Calcul de l\'itinéraire en cours</string>
     <string name="app_mode_public_transport">Transports publics</string>
@@ -2880,7 +2879,7 @@ représentant la zone : %1$s x %2$s</string>
     <string name="simulate_navigation">Simuler la navigation</string>
     <string name="choose_track_file_to_follow">Sélectionner un fichier de trace à suivre</string>
     <string name="voice_announcements">Annonces vocales</string>
-    <string name="intermediate_destinations">Destinations intermédiaires : %1$s</string>
+    <string name="intermediate_destinations">Destinations intermédiaires</string>
     <string name="arrive_at_time">Arrivée à %1$s</string>
     <string name="cubic_m">m³</string>
     <string name="metric_ton">t</string>
