--- a/OsmAnd/res/values-he/strings.xml
+++ b/OsmAnd/res/values-he/strings.xml
@@ -2878,11 +2878,10 @@
     <string name="add_destination_point">הוספת יעד</string>
     <string name="add_intermediate_point">הוספת נקודת ביניים</string>
     <string name="add_start_point">הוספת נקודת התחלה</string>
-    <string name="intermediate_waypoint">נקודת ביניים: %1$s</string>
-    <string name="waypoints">נקודות דרך: %1$s</string>
-    <string name="transfers">החלפות: %1$s</string>
-    <string name="on_foot">ברגל: %1$s</string>
-    <string name="route_way">דרך: %1$s</string>
+    <string name="intermediate_waypoint">נקודת ביניים</string>
+    <string name="transfers">החלפות</string>
+    <string name="on_foot">ברגל</string>
+    <string name="route_way">דרך</string>
     <string name="points_of_interests">נקודות עניין (נ״ע)</string>
     <string name="waiting_for_route_calculation">בהמתנה לחישוב מסלול</string>
     <string name="app_mode_public_transport">תחבורה ציבורית</string>
@@ -2891,7 +2890,7 @@
     <string name="simulate_navigation">הדמיית ניווט</string>
     <string name="choose_track_file_to_follow">נא לבחור קובץ מסלול להצגה</string>
     <string name="voice_announcements">הכרזות קוליות</string>
-    <string name="intermediate_destinations">יעדי ביניים: %1$s</string>
+    <string name="intermediate_destinations">יעדי ביניים</string>
     <string name="arrive_at_time">הגעה ב־%1$s</string>
     <string name="quick_action_switch_day_night_descr">נגיעה בכפתור פעולה זה תחליף בין מצבי יום ולילה עבור OsmAnd</string>
     <string name="quick_action_switch_day_mode">מצב יום</string>
