--- a/OsmAnd/res/values-hu/strings.xml
+++ b/OsmAnd/res/values-hu/strings.xml
@@ -2786,11 +2786,10 @@ Kérlek adj meg egy teljes kódot</string>
     <string name="add_destination_point">Célpont hozzáadása</string>
     <string name="add_intermediate_point">Köztes célpont hozzáadása</string>
     <string name="add_start_point">Kiindulópont hozzáadása</string>
-    <string name="intermediate_waypoint">"Köztes célpont: %1$s "</string>
-    <string name="waypoints">Útpontok: %1$s</string>
-    <string name="transfers">átszállások: %1$s</string>
-    <string name="on_foot">gyalog: %1$s</string>
-    <string name="route_way">Út: %1$s</string>
+    <string name="intermediate_waypoint">Köztes célpont</string>
+    <string name="transfers">átszállások</string>
+    <string name="on_foot">gyalog</string>
+    <string name="route_way">Út</string>
     <string name="points_of_interests">Érdekes helyek (POI)</string>
     <string name="waiting_for_route_calculation">Várakozás az útvonal kiszámítására</string>
     <string name="app_mode_public_transport">Tömegközlekedés</string>
@@ -2799,7 +2798,7 @@ Kérlek adj meg egy teljes kódot</string>
     <string name="simulate_navigation">Navigáció szimulálása</string>
     <string name="choose_track_file_to_follow">Válaszd ki a követendő nyomvonalfájlt</string>
     <string name="voice_announcements">Hangbemondások</string>
-    <string name="intermediate_destinations">Köztes célpontok: %1$s</string>
+    <string name="intermediate_destinations">Köztes célpontok</string>
     <string name="arrive_at_time">Érkezés ekkor: %1$s</string>
     <string name="powered_by_osmand">A motorháztető alatt: OsmAnd</string>
     <string name="third_party_application">Harmadik féltől származó alkalmazás</string>
