--- a/OsmAnd/res/values-is/strings.xml
+++ b/OsmAnd/res/values-is/strings.xml
@@ -2903,11 +2903,10 @@ Stendur fyrir svæði: %1$s x %2$s</string>
     <string name="add_destination_point">Bæta við áfangastað</string>
     <string name="add_intermediate_point">Bæta við milliáfanga</string>
     <string name="add_start_point">Bæta við upphafspunkti</string>
-    <string name="intermediate_waypoint">Millipunktur: %1$s</string>
-    <string name="waypoints">Ferilpunktar: %1$s</string>
-    <string name="transfers">millifærslur: %1$s</string>
-    <string name="on_foot">gangandi: %1$s</string>
-    <string name="route_way">Leið: %1$s</string>
+    <string name="intermediate_waypoint">Millipunktur</string>
+    <string name="transfers">millifærslur</string>
+    <string name="on_foot">gangandi</string>
+    <string name="route_way">Leið</string>
     <string name="points_of_interests">Merkisstaðir (POI)</string>
     <string name="waiting_for_route_calculation">Bíð eftir útreikningi leiðar</string>
     <string name="app_mode_public_transport">Almenningssamgöngur</string>
@@ -2916,7 +2915,7 @@ Stendur fyrir svæði: %1$s x %2$s</string>
     <string name="simulate_navigation">Herma eftir leiðsögn</string>
     <string name="choose_track_file_to_follow">Veldu ferilskrá til að fylgja</string>
     <string name="voice_announcements">Raddtilkynningar</string>
-    <string name="intermediate_destinations">Milliáfangar: %1$s</string>
+    <string name="intermediate_destinations">Milliáfangar</string>
     <string name="arrive_at_time">Koma klukkan %1$s</string>
     <string name="lang_gn_py">Guaraní</string>
     <string name="quick_action_switch_day_night_descr">Ef ýtt er á þennan aðgerðahnapp verður skipt á milli Dags- og Næturhams í OsmAnd</string>
