--- a/OsmAnd/res/values-pt/strings.xml
+++ b/OsmAnd/res/values-pt/strings.xml
@@ -2841,11 +2841,10 @@
     <string name="add_destination_point">Adicionar destino</string>
     <string name="add_intermediate_point">Adicionar intermediário</string>
     <string name="add_start_point">Adicionar ponto de partida</string>
-    <string name="intermediate_waypoint">Ponto intermédio: %1$s</string>
-    <string name="waypoints">Pontos de passagem: %1$s</string>
-    <string name="transfers">transferências: %1$s</string>
-    <string name="on_foot">a pé: %1$s</string>
-    <string name="route_way">Caminho: %1$s</string>
+    <string name="intermediate_waypoint">Ponto intermédio</string>
+    <string name="transfers">transferências</string>
+    <string name="on_foot">a pé</string>
+    <string name="route_way">Caminho</string>
     <string name="points_of_interests">Pontos de interesse (POI)</string>
     <string name="waiting_for_route_calculation">Aguardando o cálculo da rota</string>
     <string name="app_mode_public_transport">Transporte público</string>
@@ -2854,6 +2853,6 @@
     <string name="simulate_navigation">Simular navegação</string>
     <string name="choose_track_file_to_follow">Escolha o ficheiro de caminho a seguir</string>
     <string name="voice_announcements">Anúncios de voz</string>
-    <string name="intermediate_destinations">Destinos intermediários: %1$s</string>
+    <string name="intermediate_destinations">Destinos intermediários</string>
     <string name="arrive_at_time">Chegar às %1$s</string>
 </resources>
