--- a/OsmAnd/res/values-sc/strings.xml
+++ b/OsmAnd/res/values-sc/strings.xml
@@ -2875,7 +2875,6 @@ Pro praghere iscrie su còdighe intreu</string>
     <string name="quick_action_switch_night_mode">Modalidade pro sa note</string>
     <string name="quick_action_day_night_switch_mode">Cola intre Die/Note</string>
     <string name="add_destination_point">Annanghe una destinatzione</string>
-    <string name="waypoints">Puntos de coladòrgiu: %1$s</string>
     <string name="cubic_m">m³</string>
     <string name="metric_ton">t</string>
     <string name="shared_string_capacity">Capatzidade</string>
@@ -2884,10 +2883,10 @@ Pro praghere iscrie su còdighe intreu</string>
     <string name="swap_start_and_destination">Cuncàmbia sa partèntzia e sa destinatzione</string>
     <string name="add_intermediate_point">Annanghe unu puntu de coladòrgiu</string>
     <string name="add_start_point">Annanghe unu puntu de incumintzu</string>
-    <string name="intermediate_waypoint">Puntu de coladòrgiu: %1$s</string>
-    <string name="transfers">tramudadas: %1$s</string>
-    <string name="on_foot">a pede: %1$s</string>
-    <string name="route_way">Modalidade: %1$s</string>
+    <string name="intermediate_waypoint">Puntu de coladòrgiu</string>
+    <string name="transfers">tramudadas</string>
+    <string name="on_foot">a pede</string>
+    <string name="route_way">Modalidade</string>
     <string name="points_of_interests">Puntos de interesse (PDI)</string>
     <string name="waiting_for_route_calculation">Isetende pro su càlculu de s\'àndala</string>
     <string name="app_mode_public_transport">Trasportu pùblicu</string>
@@ -2896,7 +2895,7 @@ Pro praghere iscrie su còdighe intreu</string>
     <string name="simulate_navigation">Sìmula su nàvigu</string>
     <string name="choose_track_file_to_follow">Ischerta unu documentu de rasta de sighire</string>
     <string name="voice_announcements">Annùntzios vocales</string>
-    <string name="intermediate_destinations">Destinatziones intermèdias: %1$s</string>
+    <string name="intermediate_destinations">Destinatziones intermèdias</string>
     <string name="arrive_at_time">Arribada a sas %1$s</string>
     <string name="route_class_stat_container">Classe</string>
     <string name="route_surface_stat_container">Superfìtzie</string>
