--- a/OsmAnd/res/values-sv/strings.xml
+++ b/OsmAnd/res/values-sv/strings.xml
@@ -2770,11 +2770,10 @@ Vänligen tillhandahåll fullständig kod</string>
     <string name="add_destination_point">Lägg till destination</string>
     <string name="add_intermediate_point">Lägg till hållplats</string>
     <string name="add_start_point">Lägg till startpunkt</string>
-    <string name="intermediate_waypoint">Hållplats: %1$s</string>
-    <string name="waypoints">Hållpunkter: %1$s</string>
-    <string name="transfers">övergångar: %1$s</string>
-    <string name="on_foot">till fots: %1$s</string>
-    <string name="route_way">Väg: %1$s</string>
+    <string name="intermediate_waypoint">Hållplats</string>
+    <string name="transfers">övergångar</string>
+    <string name="on_foot">till fots</string>
+    <string name="route_way">Väg</string>
     <string name="points_of_interests">Intressepunkter (IP)</string>
     <string name="waiting_for_route_calculation">Väntar på beräkning av rutten</string>
     <string name="app_mode_public_transport">Kollektivtrafik</string>
@@ -2783,6 +2782,6 @@ Vänligen tillhandahåll fullständig kod</string>
     <string name="simulate_navigation">Simulera navigering</string>
     <string name="choose_track_file_to_follow">Välj en spårfil att följa</string>
     <string name="voice_announcements">Röstmeddelanden</string>
-    <string name="intermediate_destinations">Mellanliggande destinationer: %1$s</string>
+    <string name="intermediate_destinations">Mellanliggande destinationer</string>
     <string name="arrive_at_time">Ankomst klockan %1$s</string>
 </resources>
