--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,8 +11,8 @@
 	Thx - Hardy
 
 -->
-
-
+    <string name="use_osm_live_public_transport_description">Enable public transport for OsmAnd Live changes.</string>
+    <string name="use_osm_live_public_transport">OsmAnd Live public transport</string>
     <string name="time_of_day">Time of day</string>
     <string name="by_transport_type">By %1$s</string>
     <string name="step_by_step">Step by step</string>
